# cardioplace-v2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  RESULTS.md  appspec.yml  buildspec.yml  docker-compose.yml  package-lock.json  package.json  prisma.config.ts
.claude/: settings.json  settings.local.json
adk-service/: .gitignore  list_models.py  main.py  piper_tts.py  pyproject.toml  requirements.txt
adk-service/agent/: _cardio_agent.py.legacy  cardio_agent.py  groq_tools.py  prompts.py  tools.py
adk-service/proto/: voice.proto
adk-service/server/: grpc_server.py  voice_session.py
admin/: .env.example  .gitignore  Dockerfile  jest.config.mjs  next.config.ts  package.json
backend/: .env.example  Dockerfile  check_baseline.js  check_baseline.js.map  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
docs/: ACCESSIBILITY_CHECK_GUIDE.md  ACCESS_SCOPE.md  ADMIN_ROLE_ACCESS.md  ALERT_SCENARIOS.md  API_DOCS_MOBILE.md  API_DOCS_WEB.md  AUTH_MODULE.md  AUTO_LOGOFF_30MIN_PATIENT_DECISION_2026_07.md  BIOMETRIC_AUTH.md  BP_ALERTS_BACKEND_FRONTEND_WIRING.md  BP_RULE_BASED_ALERTS.md  BUILD_PLAN.md  CHAT_SCENARIOS.md  CHAT_TOOLS_TEST_REPORT.md  CLINICAL_SPEC.md  CLINICAL_TRANSLATION_PACKAGE_EN.md  CLOUDFRONT_SECURITY_HEADERS.md  E2E_TEST_CASES.md  ENCRYPTION.md  EPHI_INVENTORY.md  FRONTEND_BUILD_SPEC.md  HANDOFF_AMHARIC_TRANSLATION_2026_07_13.md  MANISHA_DECISIONS_LOG.md  MFA_AUTHENTICATOR_APP.md  ML_BP_ALERT_MODEL_BRAINSTORM_2026_07_15.md  POSTMAN_ALERT_TESTING.md  PRODUCTION_DEPLOY_CHECKLIST.md  REPORTING_FEATURES.md  (+6 more)
(+1107 files in other folders)
